sandbox/output
StringCalculator.java:30: error: ')' expected
        if(!neg.equals(""){
                          ^
1 error
